test/conformance/chainsaw/validate/e2e/x509-decode-deprecated/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-x509-decode
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
